@@ -24,6 +24,7 @@ opsi-script (4.12.4.28) stable; urgency=low
      now support leading zeros (then it will handled as float starting with 0.)
      now support a letter as last part of the number (1.0.23b like is used at openssl versions)
  * osparser: executewith: call powershell scripts with -file parameter in order to get the correct exitcode
+ * osparser: fix Access Violation in CreateAndProcessScript on empty scriptfiles.
 
 -- d.oertel <d.oertel@uib.de> Tue, 31 Aug 2021 15:00
 
